Vr1. - Atualização aplicação de reposicionamento

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <img src="./assets/menu/home.png" alt="Home">
                 <img src="./assets/menu/search.png" alt="Inbox">
                 <img src="./assets/menu/play.png" alt="NewPublic">
-                <img src="./assets/menu/cart.png" alt="Explorer">
-                <img src="./assets/menu/cart.png" alt="Activity">
-                <img src="./assets/menu/fotoperfil.jpg" alt="Perfil" class="perfil">
+                <a target="_blank" href="https://www.linkedin.com/in/danielemidio1988/"><img src="./assets/menu/linkedin-box.png" alt="Explorer" class="icon"></a>
+                <a target="_blank" href="https://github.com/DanielEmidio1988"><img src="./assets/menu/octocat.png" alt="Github" class="icon"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/danielemidio1988/"><img src="./assets/menu/fotoperfil.jpg" alt="Perfil" class="perfil"></a>
             </div>
         </div>
 
@@ -47,7 +47,7 @@
                 <img src="./assets/itemironman.jpg" alt="Imagem-Box-8">
                 <img src="./assets/226933.jpg" alt="Imagem-Box-9">
                 <img src="./assets/227040.jpg" alt="Imagem-Box-10">
-                <img src="./assets/d5at98f-79ef5d72-e204-4688-8ae4-3247c440d3ed.gif" alt="Imagem-Box-11">
+                <img src="./assets/d5at98f-79ef5d72-e204-4688-8ae4-3247c440d3ed.gif" alt="Imagem-Box-11" id="ImagemMaior2">
                 <img src="./assets/itemkamehouse.png" alt="Imagem-Box-12">
                 <img src="./assets/d6mfiy2-1a057ca7-2ead-42dd-b1cd-256f0af641a4.gif" alt="Imagem-Box-13">
                 <img src="./assets/faa476b0-09ac-4bb9-a32c-4ad753bd272a.jpg" alt="Imagem-Box-14">
@@ -56,7 +56,7 @@
                 <img src="./assets/itempaisagem.jpg" alt="Imagem-Box-17">
                 <img src="./assets/wallpaperbetter.com_1280x768.jpg" alt="Imagem-Box-18">
                 <img src="./assets/pokemon-let's-go-wallpapers-117418-263425-6023389.jfif" alt="Imagem-Box-19">
-                <img src="./assets/itempaisagem.jpg" alt="Imagem-Box-20">
+                <img src="./assets/itempaisagem.jpg" alt="Imagem-Box-20" id="ImagemMaior2">
                 <img src="./assets/d5at98f-79ef5d72-e204-4688-8ae4-3247c440d3ed.gif" alt="Imagem-Box-21">
                 <img src="./assets/itemkamehouse.png" alt="Imagem-Box-22">
                 <img src="./assets/d6mfiy2-1a057ca7-2ead-42dd-b1cd-256f0af641a4.gif" alt="Imagem-Box-23">
@@ -78,7 +78,7 @@
             <img src="./assets/menu/search.png" alt="Pesquisa">
             <img src="./assets/menu/play.png" alt="Reels">
             <img src="./assets/menu/cart.png" alt="Loja">
-            <img src="./assets/menu/fotoperfil.jpg" alt="Perfil">
+            <img src="./assets/menu/fotoperfil.jpg" alt="Perfil" class="perfil-mobile">
         </div>
 
     </footer>
