--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         <div class="menu-footer">
             <img src="./assets/menu/home.png" alt="Home">
             <img src="./assets/menu/search.png" alt="Pesquisa">
-            <img src="./assets/menu/play.png" alt="Reels">
-            <img src="./assets/menu/cart.png" alt="Loja">
-            <img src="./assets/menu/fotoperfil.jpg" alt="Perfil" class="perfil-mobile">
+            <a target="_blank" href="https://www.linkedin.com/in/danielemidio1988/"><img src="./assets/menu/linkedin-box.png" alt="Explorer" class="icon-mobile"></a>
+            <a target="_blank" href="https://github.com/DanielEmidio1988"><img src="./assets/menu/octocat.png" alt="Github" class="icon-mobile"></a>
+            <a target="_blank" href="https://www.linkedin.com/in/danielemidio1988/"><img src="./assets/menu/fotoperfil.jpg" alt="Perfil" class="perfil-mobile"></a>
         </div>
 
     </footer>
